--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a href="lappy.html">Lappy / PCs</a>
       </li>
       <li class="sb-has-children">
-        <a href="Printers.html">Printers</a>
+        <a href="printers.html">Printers</a>
         </li>
       <li class="sb-has-children">
         <a href="accessories.html">Accessories</a>
