--- a/shop.html
+++ b/shop.html
@@ -259,7 +259,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <a href="shop-list-1.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="laptop.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/1.png" alt="icon">
@@ -851,7 +851,7 @@
               <li><a href="#."><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#."><i class="fab fa-youtube"></i></a></li>
             </ul>
-            <div class="sb-copy">&copy; late 2021 Starbelly. All Rights Reserved.</div>
+            <div class="sb-copy">&copy; 2024 Apna Lappy. All Rights Reserved.</div>
           </div>
         </div>
       </footer>
