--- a/product.html
+++ b/product.html
@@ -242,7 +242,7 @@
                   <h1 class="sb-h2">Online shop</h1>
                   <ul class="sb-breadcrumbs">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shop-1.html">Shop</a></li>
+                    <li><a href="shop.html">Shop</a></li>
                     <li><a href="#.">Product</a></li>
                   </ul>
                 </div>
@@ -652,7 +652,7 @@
                 <h2 class="sb-h1 sb-mb-15">Free delivery service.</h2>
                 <p class="sb-text sb-mb-30">*Consectetur numquam poro nemo veniam<br>eligendi rem adipisci quo modi.</p>
                 <!-- button -->
-                <a href="shop-1.html" class="sb-btn">
+                <a href="shop.html" class="sb-btn">
                   <span class="sb-icon">
                     <img src="img/ui/icons/cart.svg" alt="icon">
                   </span>
