--- a/product.html
+++ b/product.html
@@ -650,7 +650,7 @@
             <div class="col-lg-6 align-self-center">
               <div class="sb-cta-text">
                 <h2 class="sb-h1 sb-mb-15">Free delivery service.</h2>
-                <p class="sb-text sb-mb-30">*Consectetur numquam poro nemo veniam<br>eligendi rem adipisci quo modi.</p>
+                <p class="sb-text sb-mb-30">*We provide free delivery services in the area under 2km from the store!</p>
                 <!-- button -->
                 <a href="shop.html" class="sb-btn">
                   <span class="sb-icon">
@@ -660,11 +660,11 @@
                 </a>
                 <!-- button end -->
                 <!-- button -->
-                <a href="menu-1.html" class="sb-btn sb-btn-2 sb-btn-gray">
+                <a href="indexhtml" class="sb-btn sb-btn-2 sb-btn-gray">
                   <span class="sb-icon">
                     <img src="img/ui/icons/menu.svg" alt="icon">
                   </span>
-                  <span>Menu</span>
+                  <span>Home</span>
                 </a>
                 <!-- button end -->
               </div>
