--- a/product.html
+++ b/product.html
@@ -660,7 +660,7 @@
                 </a>
                 <!-- button end -->
                 <!-- button -->
-                <a href="indexhtml" class="sb-btn sb-btn-2 sb-btn-gray">
+                <a href="index.html" class="sb-btn sb-btn-2 sb-btn-gray">
                   <span class="sb-icon">
                     <img src="img/ui/icons/menu.svg" alt="icon">
                   </span>
