--- a/about.html
+++ b/about.html
@@ -268,7 +268,7 @@
             <div class="col-lg-6 align-self-center">
               <div class="sb-illustration-2 sb-mb-90">
                 <div class="sb-interior-frame">
-                  <img src="img/gallery/interior.jpg" alt="interior" class="sb-interior" style="object-position: center">
+                  <img src="img/illustrations/interior.jpg" alt="interior" class="sb-interior" style="object-position: center">
                 </div>
                 <div class="sb-square"></div>
                 <div class="sb-cirkle-1"></div>
