--- a/shop.html
+++ b/shop.html
@@ -259,7 +259,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <a href="laptop.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="lappy.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/1.png" alt="icon">
