--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <div class="sb-main-title-frame">
                 <div class="sb-main-title">
                   <span class="sb-suptitle sb-mb-30">Hi, new friend!</span>
-                  <h1 class="sb-mb-30">We're here to <br>provide solutions, <br>not just sales!</h1>
+                  <h1 class="sb-mb-30">अब हर हाथ में होगी <br>अपना लैपी!</h1>
                   <p class="sb-text sb-text-lg sb-mb-30">We’re committed to delivering solutions that elevate your experience, not just making sales. Your growth is our mission, from start to finish.</p>
                   <!-- button -->
                   <a href="lappy.html" class="sb-btn">
