--- a/checkout.html
+++ b/checkout.html
@@ -26,7 +26,7 @@
   <!-- starbelly css -->
   <link rel="stylesheet" href="css/style.css">
   <!-- page title -->
-  <title>Starbelly</title>
+  <title>Checkout | Apna Lappy</title>
 </head>
 
 <body>
