--- a/cart.html
+++ b/cart.html
@@ -59,7 +59,9 @@
             <img src="img/ui/logo.svg" alt="Starbelly">
           </a>
          <!-- menu -->
->
+<div class="sb-right-side">
+  <nav id="sb-dynamic-menu" class="sb-menu-transition">
+    <ul class="sb-navigation">
       <li class="sb-active sb-has-children">
         <a href="index.html">Home</a>
                         <li class="sb-has-children">
