--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
   <!-- starbelly css -->
   <link rel="stylesheet" href="css/style.css">
   <!-- page title -->
-  <title>C</title>
+  <title>Cart | Apna Lappy</title>
 </head>
 
 <body>
