--- a/cart.html
+++ b/cart.html
@@ -243,7 +243,7 @@
                   <h1 class="sb-h2">Your order.</h1>
                   <ul class="sb-breadcrumbs">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shop-1.html">Shop</a></li>
+                    <li><a href="shop.html">Shop</a></li>
                     <li><a href="#.">Cart</a></li>
                   </ul>
                 </div>
