--- a/index.html
+++ b/index.html
@@ -446,12 +446,11 @@
                     <img src="img/menu/1.jpg" alt="product">
                   </div>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title">Chevrefrit au miel</h4>
+                    <h4 class="sb-card-title">HP Gaming Laptop</h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
-                    <ul class="sb-stars">
+                    <p class="sb-text sb-mb-15"><span>HP Victus Gaming Laptop, 12th Gen Intel Core i7-12650H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 512GB <ul class="sb-stars">
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
@@ -468,12 +467,11 @@
                     <div class="sb-badge sb-    Trending"><i class=" "></i>      Trending</div>
                   </div>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title">Saumon Gravlax</h4>
-                    <div class="sb-price"><sub>$</sub> 9</div>
+                    <h4 class="sb-card-title">HP Gaming Laptop</h4>
+                    <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
-                    <ul class="sb-stars">
+                    <p class="sb-text sb-mb-15"><span>HP Victus Gaming Laptop, 12th Gen Intel Core i7-12650H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 512GB <ul class="sb-stars">
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
@@ -490,12 +488,11 @@
                     <div class="sb-badge sb-hot"><i class=" "></i> Hot Deal</div>
                   </div>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title">Croustillant de poisson</h4>
-                    <div class="sb-price"><sub>$</sub> 4</div>
+                    <h4 class="sb-card-title">HP Gaming Laptop</h4>
+                    <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
-                    <ul class="sb-stars">
+                    <p class="sb-text sb-mb-15"><span>HP Victus Gaming Laptop, 12th Gen Intel Core i7-12650H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 512GB <ul class="sb-stars">
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
@@ -512,12 +509,11 @@
                     <div class="sb-badge sb-trending"><i class=" "></i>Trending</div>
                   </div>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title">Carpaccio de daurade</h4>
-                    <div class="sb-price"><sub>$</sub> 6</div>
+                    <h4 class="sb-card-title">HP Gaming Laptop</h4>
+                    <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
-                    <ul class="sb-stars">
+                    <p class="sb-text sb-mb-15"><span>HP Victus Gaming Laptop, 12th Gen Intel Core i7-12650H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 512GB <ul class="sb-stars">
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
@@ -533,12 +529,11 @@
                     <img src="img/menu/4.jpg" alt="product">
                   </div>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title">Stracciatella</h4>
-                    <div class="sb-price"><sub>$</sub> 11</div>
+                    <h4 class="sb-card-title">HP Gaming Laptop</h4>
+                    <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
-                    <ul class="sb-stars">
+                    <p class="sb-text sb-mb-15"><span>HP Victus Gaming Laptop, 12th Gen Intel Core i7-12650H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 512GB <ul class="sb-stars">
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
                       <li><i class="fas fa-star"></i></li>
