--- a/printers.html
+++ b/printers.html
@@ -274,11 +274,11 @@
                   <img src="img/menu/28.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Chevrefrit au miel</h4>
+                  <h4 class="sb-card-title">Premium Printers</h4>
                   <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -293,14 +293,14 @@
               <a data-fancybox="menu" data-no-swup href="img/menu/29.jpg" class="sb-menu-item sb-mb-30">
                 <div class="sb-cover-frame">
                   <img src="img/menu/29.jpg" alt="product">
-                  <div class="sb-badge sb-vegan"><i class="fas fa-leaf"></i> Vegan</div>
+                  <div class="sb-badge sb-Trending"><i class="fas fa-bolt"></i> Trending</div>
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Saumon Gravlax</h4>
-                  <div class="sb-price"><sub>$</sub> 9</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -315,20 +315,20 @@
               <a data-fancybox="menu" data-no-swup href="img/menu/30.jpg" class="sb-menu-item sb-mb-30">
                 <div class="sb-cover-frame">
                   <img src="img/menu/30.jpg" alt="product">
-                  <div class="sb-badge sb-hot"><i class="fas fa-pepper-hot"></i> Hot</div>
+                  <div class="sb-badge sb-hot"><i class="fas fa-star"></i> Hot Deal</div>
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Croustillant de poisson</h4>
-                  <div class="sb-price"><sub>$</sub> 4</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
-                    <li class="sb-empty"><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
                   </ul>
                 </div>
               </a>
@@ -339,11 +339,11 @@
                   <img src="img/menu/31.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Stracciatella</h4>
-                  <div class="sb-price"><sub>$</sub> 11</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -358,14 +358,14 @@
               <a data-fancybox="menu" data-no-swup href="img/menu/32.jpg" class="sb-menu-item sb-mb-30">
                 <div class="sb-cover-frame">
                   <img src="img/menu/32.jpg" alt="product">
-                  <div class="sb-badge sb-vegan"><i class="fas fa-leaf"></i> Vegan</div>
+                  <div class="sb-badge sb-Trending"><i class="fas fa-bolt"></i> Trending</div>
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Carpaccio de daurade</h4>
-                  <div class="sb-price"><sub>$</sub> 6</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -382,11 +382,11 @@
                   <img src="img/menu/33.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Chevrefrit au miel</h4>
+                  <h4 class="sb-card-title">Premium Printers</h4>
                   <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -403,17 +403,17 @@
                   <img src="img/menu/34.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Stracciatella</h4>
-                  <div class="sb-price"><sub>$</sub> 11</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
-                    <li class="sb-empty"><i class="fas fa-star"></i></li>
-                    <li class="sb-empty"><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
                   </ul>
                 </div>
               </a>
@@ -422,14 +422,14 @@
               <a data-fancybox="menu" data-no-swup href="img/menu/35.jpg" class="sb-menu-item sb-mb-30">
                 <div class="sb-cover-frame">
                   <img src="img/menu/35.jpg" alt="product">
-                  <div class="sb-badge sb-vegan"><i class="fas fa-leaf"></i> Vegan</div>
+                  <div class="sb-badge sb-Trending"><i class="fas fa-bolt"></i> Trending</div>
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Carpaccio de daurade</h4>
-                  <div class="sb-price"><sub>$</sub> 6</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -446,11 +446,11 @@
                   <img src="img/menu/36.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Chevrefrit au miel</h4>
+                  <h4 class="sb-card-title">Premium Printers</h4>
                   <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -465,14 +465,14 @@
               <a data-fancybox="menu" data-no-swup href="img/menu/37.jpg" class="sb-menu-item sb-mb-30">
                 <div class="sb-cover-frame">
                   <img src="img/menu/37.jpg" alt="product">
-                  <div class="sb-badge sb-vegan"><i class="fas fa-leaf"></i> Vegan</div>
+                  <div class="sb-badge sb-Trending"><i class="fas fa-bolt"></i> Trending</div>
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Carpaccio de daurade</h4>
-                  <div class="sb-price"><sub>$</sub> 6</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
@@ -489,17 +489,17 @@
                   <img src="img/menu/38.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Carpaccio de daurade</h4>
-                  <div class="sb-price"><sub>$</sub> 7</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
-                    <li class="sb-empty"><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
                   </ul>
                 </div>
               </a>
@@ -510,11 +510,11 @@
                   <img src="img/menu/39.jpg" alt="product">
                 </div>
                 <div class="sb-card-tp">
-                  <h4 class="sb-card-title">Carpaccio de daurade</h4>
-                  <div class="sb-price"><sub>$</sub> 12</div>
+                  <h4 class="sb-card-title">Premium Printers</h4>
+                  <div class="sb-price"><sub>$</sub> 14</div>
                 </div>
                 <div class="sb-description">
-                  <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                  <p class="sb-text sb-mb-15"><span>High Quality Smart Tank Premium All in One Printers with affordable price </span>.</p>
                   <ul class="sb-stars">
                     <li><i class="fas fa-star"></i></li>
                     <li><i class="fas fa-star"></i></li>
